--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
           <span class="counter">140</span>
         </form>
       </section>
-
+      <!-- the section below is where the tweets will be displayed-->
       <section class="show-tweet">
 
       </section>
